# PeriodicDMK

./: .gitignore  .gitmodules  LICENSE  README.md  setenv.sh
cpp/: CMakeLists.txt
cpp/include/: dmk.h
cpp/include/dmk/: aot_kernels.hpp  chebychev.hpp  direct.hpp  fortran.h  fourier_data.hpp  gemm.hpp  legeexps.hpp  logger.h  omp_wrapper.hpp  pbc.hpp  pbc_tree.hpp  planewave.hpp  prolate.hpp  prolate0_eval.hpp  prolate0_fun.hpp  proxy.hpp  tensorprod.hpp  tree.hpp  types.hpp  util.hpp  vector_kernels.hpp
cpp/include/pdmk/: campaign_ref_io.hpp  cell_list.hpp  cubic_cover.hpp  cubic_cover_optimizer.hpp  eval_timing.hpp  ewald_nufft.hpp  image_layout.hpp  lattice.hpp  nufft_backend.hpp  pdmk_capi.h  periodic_dmk.hpp  types.hpp
cpp/src/: cubic_cover.cpp  cubic_cover_optimizer.cpp  ewald_nufft.cpp  lattice.cpp  pdmk_capi.cpp  periodic_dmk.cpp
cpp/src/dmk/: aot_kernels.cpp  direct.cpp  fourier_data.cpp  jit_kernels.cpp  legeexps.cpp  logger.cpp  pbc.cpp  pbc_tree.cpp  planewave.cpp  prolate.cpp  prolate0_eval.cpp  proxy.cpp  tensorprod.cpp  timing.cpp  util.cpp
cpp/tests/: test_campaign_ref_io.cpp  test_cell_list_2d.cpp  test_cubic_cover.cpp  test_cubic_cover_optimizer.cpp  test_dmk_pbc_smoke.cpp  test_evaluate_timed.cpp  test_ewald_nufft.cpp  test_ewald_nufft_2d.cpp  test_far_field_nufft_2d.cpp  test_image_layout.cpp  test_image_layout_2d.cpp  test_lattice.cpp  test_lattice_setup_qmat.cpp  test_nonuniform.cpp  test_pbc_tree_update_charges.cpp  test_periodic_dmk.cpp  test_periodic_dmk_2d.cpp  test_periodic_dmk_qp.cpp  test_periodic_dmk_tree.cpp  test_reusable_tree.cpp
julia/PeriodicDMK/: Project.toml
julia/PeriodicDMK/src/: PeriodicDMK.jl
julia/PeriodicDMK/test/: runtests.jl
